updated css to fix Google Map not showing error. Fixed css on index.html & changed css on new-map to space and display cards & map

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,10 +8,11 @@ nav {
   color: black;
 }
 .col.m4.l4.card{
-margin-top: 50px
+margin-top: 50px;
+padding: 10px;
 }
 .col.m8.l8{
-  margin-top: 75px
+  margin-top: 75px;
 }
 
 .hero-image{
@@ -32,14 +33,34 @@ div.chip{
   margin: auto;
 }
 
-.outline{
-  border: green 1px dashed;
+.map-outline {
+  margin-top: 25px;
 }
+.outline{
+  /*border: green 1px dashed;*/
+  height: 100%;
+  width: 100%;
+}
+#wine-map{
+  height: 400px;
+  width: 400px;
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+  border-radius: 25px;
 
+  /* // TODO: SETUP @MEDIA SIZING FOR SMALLER WINDOWS TO MAKE MAP RESPONSIVE*/
+}
 .home-hero{
   color: white;
   /*font: bold;*/
   font-size: 30px;
   text-align: center;
   font-family: 'Raleway', sans-serif;
+}
+
+.mapwinery{
+  border-radius: 25px 25px 0px 0px;
 }
